# LastCall.jl

./: .gitignore  AGENTS.md  CLAUDE.md  Manifest.toml  Project.toml  README.md
.github/workflows/: CI.yml
benchmark/: benchmarks.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv
docs/: STATUS.md  make.jl  troubleshooting.md
examples/: README.md  advanced_examples.jl  basic_examples.jl  debug_hash.jl  debug_structs.jl  generic_struct_test.jl  phase4_ndarray.jl  phase4_pi.jl  phase4_prototype.jl  struct_examples.jl
examples/sample_crate_pyo3/: Cargo.toml  README.md  main.jl  main.py
examples/sample_crate_pyo3/src/: lib.rs
src/: LastCall.jl  RustCall.jl  cache.jl  cargoproject.jl  codegen.jl  compiler.jl  crate_bindings.jl  dependencies.jl  dependency_resolution.jl  exceptions.jl  generics.jl  hot_reload.jl  julia_functions.jl  llvmcodegen.jl  llvmintegration.jl  memory.jl  rustmacro.jl  ruststr.jl  structs.jl  types.jl  typetranslation.jl
test/: runtests.jl  test_advanced_examples.jl  test_arrays.jl  test_basic_examples.jl  test_cache.jl  test_cargo.jl  test_crate_bindings.jl  test_dependencies.jl  test_docs_examples.jl  test_error_handling.jl  test_generic_struct.jl  test_generics.jl  test_hot_reload.jl  test_julia_attribute.jl  test_julia_to_rust_generic.jl  test_julia_to_rust_simple.jl  test_julia_to_rust_struct.jl  test_llvmcall.jl  test_ndarray.jl  test_ownership.jl  test_ownership_examples.jl  test_phase4.jl  test_phase4_ndarray.jl  test_phase4_pi.jl  test_regressions.jl  test_rust_helpers_integration.jl  test_struct_examples.jl
(+439 files in other folders)
